Popup menus on post_load handlers crash blender. #46201

Closed
opened 2015-09-22 00:16:54 +02:00 by Ryan · 4 comments

System Information
Windows 7, Xeon, Nvidia Quadro 2000D

Blender Version
Broken: 2.76 c586e30
Worked: none?

Trying to add a menu at each load, simplified version below will register fine and then crash blender when a new file is loaded (can be registered from text editor).

import bpy
from bpy.app.handlers import persistent

def greeter_draw(self, context):
    self.layout.label("Hello World")

@persistent
def post_load_handler(dummy):
    bpy.context.window_manager.popup_menu(greeter_draw, title="Greeting", icon='INFO')

def register():
        bpy.app.handlers.load_post.append(post_load_handler)

def unregister():
    bpy.app.handlers.load_post.remove(post_load_handler)

if __name__ == "__main__":
    register()

Thanks!

**System Information** Windows 7, Xeon, Nvidia Quadro 2000D **Blender Version** Broken: 2.76 c586e30 Worked: none? Trying to add a menu at each load, simplified version below will register fine and then crash blender when a new file is loaded (can be registered from text editor). ``` import bpy from bpy.app.handlers import persistent def greeter_draw(self, context): self.layout.label("Hello World") @persistent def post_load_handler(dummy): bpy.context.window_manager.popup_menu(greeter_draw, title="Greeting", icon='INFO') def register(): bpy.app.handlers.load_post.append(post_load_handler) def unregister(): bpy.app.handlers.load_post.remove(post_load_handler) if __name__ == "__main__": register() ``` Thanks!
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @shiprex

Added subscriber: @shiprex

This issue was referenced by 12ea90b707

This issue was referenced by 12ea90b707d2ccac5960874eac83af057911320c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46201
No description provided.