Fix T46201: Popup menu in post_load handler crash

Match regular file loading logic for new-file operator.